# aweek

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: anime_functions.h
src/: anime_functions.c  main.c
